<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/page_bg"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="me.ppxpp.project.activity.LoginActivity$PlaceholderFragment">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_by_phone_or_email"
            android:textColor="@color/font_color" />

        <EditText
            android:id="@+id/phone_or_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv1"
            android:layout_marginTop="10dp"
            android:background="@drawable/form_input_bg"
            android:hint="@string/phone_or_email_hint"
            android:padding="10dp"
            android:textColorHint="#959595" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_or_email"
            android:layout_marginTop="10dp"
            android:background="@drawable/form_input_bg"
            android:hint="@string/password_hint"
            android:padding="10dp"
            android:textColorHint="#959595" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="10dp"
            android:background="@drawable/green_btn_bg"
            android:text="@string/login_btn"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn"
            android:layout_marginTop="10dp"
            android:background="@drawable/qq_login_btn_bg"
            android:text="@string/register_btn"
            android:textColor="#898989" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/login_by_oauth"
            android:textColor="@color/font_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv2"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/sina_weibo_login_btn_bg"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/sina_logo_big"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:text="新浪微博"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/qq_login_btn_bg"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/qq_logo_big"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:text="腾讯QQ"
                android:textColor="#909090" />
        </LinearLayout>


    </RelativeLayout>
</ScrollView>

